--- a/Experiment with Controls/MainWindow.xaml
+++ b/Experiment with Controls/MainWindow.xaml
@@ -7,15 +7,21 @@
         mc:Ignorable="d"
         Title="Experiment with Controls" Height="450" Width="800">
     <Grid>
+
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition Height=".5*"/>
         </Grid.RowDefinitions>
-        
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+        
+        <Label Content="Enter a number" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="18"/>
+        <TextBlock x:Name="number" Text="#" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" TextWrapping="Wrap"/>
+        <TextBox x:Name="numberTextBox" Text="0" Margin="10,49,0,0" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="18" TextWrapping="Wrap" TextChanged="numberTextBox_TextChanged" PreviewTextInput="numberTextBox_PreviewTextInput"/>
+
     </Grid>
 </Window>
