--- a/Experiment with Controls/MainWindow.xaml
+++ b/Experiment with Controls/MainWindow.xaml
@@ -42,7 +42,7 @@
             <ListBoxItem Content="4"/>
             <ListBoxItem Content="5"/>
         </ComboBox>
-        
+
         <ComboBox x:Name="editableComboBox" Grid.Column="1" HorizontalAlignment="Left" Margin="270,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120" IsEditable="True">
             <ListBoxItem Content="1"/>
             <ListBoxItem Content="2"/>
@@ -50,5 +50,7 @@
             <ListBoxItem Content="4"/>
             <ListBoxItem Content="5"/>
         </ComboBox>
+        <Slider x:Name="smallSlider" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="120" AutoToolTipPlacement="TopLeft" Maximum="5" Minimum="1" ValueChanged="smallSlider_ValueChanged"/>
+        <Slider x:Name="bigSlider" HorizontalAlignment="Stretch" Margin="10,10,10,10" Grid.Row="2" VerticalAlignment="Center" Grid.RowSpan="1" AutoToolTipPlacement="TopLeft" Maximum="9999999999" Minimum="1111111111" Value="7183876962" ValueChanged="bigSlider_ValueChanged"/>
     </Grid>
 </Window>
