--- a/Experiment with Controls/MainWindow.xaml
+++ b/Experiment with Controls/MainWindow.xaml
@@ -22,12 +22,12 @@
         <Label Content="Enter a number" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" FontSize="18"/>
         <TextBlock x:Name="number" Text="#" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" TextWrapping="Wrap"/>
         <TextBox x:Name="numberTextBox" Text="0" Margin="10,49,0,0" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="18" TextWrapping="Wrap" TextChanged="numberTextBox_TextChanged" PreviewTextInput="numberTextBox_PreviewTextInput"/>
-        <RadioButton Content="1" HorizontalAlignment="Left" Margin="200,37,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="2" HorizontalAlignment="Left" Margin="230,37,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="3" HorizontalAlignment="Left" Margin="260,37,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="4" HorizontalAlignment="Left" Margin="200,52,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="5" HorizontalAlignment="Left" Margin="230,52,0,0" VerticalAlignment="Top"/>
-        <RadioButton Content="6" HorizontalAlignment="Left" Margin="260,52,0,0" VerticalAlignment="Top"/>
+        <RadioButton Content="1" HorizontalAlignment="Left" Margin="200,37,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <RadioButton Content="2" HorizontalAlignment="Left" Margin="230,37,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <RadioButton Content="3" HorizontalAlignment="Left" Margin="260,37,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <RadioButton Content="4" HorizontalAlignment="Left" Margin="200,52,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <RadioButton Content="5" HorizontalAlignment="Left" Margin="230,52,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+        <RadioButton Content="6" HorizontalAlignment="Left" Margin="260,52,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
         <ListBox x:Name="myListBox" Grid.Row="1" Margin="10,10,10,10">
             <ListBoxItem Content="1"/>
             <ListBoxItem Content="2"/>
